[tool.poetry]
name = "telegram_bot_base"
version = "0.1.0"
description = ""
authors = ["Georgiy <george27khan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
aiogram = "2.23.1"
googlemaps = "^4.7.3"
psycopg2 = "^2.9.5"
python-dateutil = "^2.8.2"
aiologger = "^0.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
asyncpg = "^0.27.0"
msvc-runtime = "^14.34.31931"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
